*25/02/2015 _v1.167.0_

- Amélioration de la page de gestion du réseaux Jeedom

*19/02/2015* _v1.165.0_

- Suppression de toutes les restriction du aux licences

*15/02/2015* _v1.165.0_

- Bugfix
- Possibilité d'appliqué les parametres d'un équipement/widget en masse (page Générale -> Affichage puis "Appliquer à")
- Ajout champs de recherche pour choisir une icone

*09/02/2015* _v1.163.0_

- Bugfix

*08/02/2015* _v1.162.0_

- Support de la notion de plugin privé

*31/01/2015* _v1.161.0_

- Possibilité de mettre un code sur une commande de type action (à partir de la fenêtre de configuration avancée de l'action), uniquement sur les widget (pas de code demandé pour les scénarios)

*30/01/2015* _v1.161.0_

- Ajout action gotodesign dans les scénarios pour changer le design affiché sur tous les navigateurs qui affichent un design par le design demandé

*28/01/2015* _v1.161.0_

- Ajout d'un bouton pour regénérer toutes les interactions
- Ajout d'une option pour forcer le retour à la ligne avant/après un widget

*26/01/2015* _v1.161.0_

- Ajout fonction averageBetween, maxBetween et minBetween pour les scénarios

*25/01/2015* _v1.160.0_

- Ajout d'une fenêtre d'aide pour la mise en place de conditions dans les scénarios

*23/01/2015* _v1.160.0_

- Ajout action "return" dans les scénarios, pour retourner un message spécifique suite à une interaction. Attention à bien cocher la case "Exécuter le plus rapidement possible" pour que ça fonctionne.
- Ajout d'une vérification de consistence après chaque mise à jour
- Possibilité de supprimer l'historique d'une commande avant une date donnée

*21/01/2015* _v1.160.0_

- Désactivation des contraintes sur la base lors de la mise à jour

*20/01/2015* _v1.160.0_

- Ajout du niveau de batterie sur les widgets

*19/01/2015* _v1.160.0_

- Correction des bugs de régression du parser
- Possibilité d'uploader une archive de plugin directement à partir de l'interface

*16/01/2015* _v1.159.0_

- Utilisation de composer