@@ -1,5 +1,5 @@
 <span class="cmd  cmd-widget" data-type="action" data-subtype="slider" data-cmd_id="#id#" >
-    <span class="cmdName">#name#</span>
+    <span class="cmdName">#name_display#</span>
     <div class="slider" style="margin : 5px 10px 8px 10px;width: 80px;" value="#state#"></div>
 
     <script>
