@@ -1,6 +1,6 @@
 <div style="width:90px;min-height:62px;" class="cmd #history# tooltips cmd-widget" data-type="info" data-subtype="binary" data-cmd_id="#id#" title="#collectDate#">
     <center>
-        <span style="font-weight: bold;font-size : 12px;" class='cmdName'>#name#</span>
+        <span style="font-weight: bold;font-size : 12px;" class='cmdName'>#name_display#</span>
         <span style="font-size: 3em;font-weight: bold;margin-top: 5px;" id="iconCmd#id#"></span>
     </center>
 
