@@ -7,6 +7,5 @@
 		if ('#state#' == 'Off' || '#state#' == 'Arret') {
 			$('.cmd[data-cmd_id=#id#] span.label').removeClass('label-default').addClass('label-danger');
 		}
-		$('.cmd[data-cmd_id=#id#] .cmdName').empty().append('#name#'.replace('<br/>','').replace('<br>',''));
 	</script>
 </div>
