@@ -479,28 +479,29 @@ function positionEqLogic(_id, _noResize, _class) {
             });
             if (!init(_noResize, false) && eqLogic_height_step > 1 && eqLogic_width_step > 1) {
                 if(eqLogic_width_step == 1){
-                   eqLogic.width(eqLogic.width() + 5);
-               }else{
-                   var wMarge = (Math.ceil(eqLogic.width() / eqLogic_width_step) - 1) * 2;
-                   eqLogic.width((Math.ceil(eqLogic.width() / eqLogic_width_step) * eqLogic_width_step) - 6 + wMarge);
-               }
-               if(eqLogic_height_step == 1){
+                 eqLogic.width(eqLogic.width() + 5);
+             }else{
+                 var wMarge = (Math.ceil(eqLogic.width() / eqLogic_width_step) - 1) * 2;
+                 eqLogic.width((Math.ceil(eqLogic.width() / eqLogic_width_step) * eqLogic_width_step) - 6 + wMarge);
+             }
+             if(eqLogic_height_step == 1){
                 eqLogic.height(eqLogic.height() + 5);
             }else{
-               var hMarge = (Math.ceil(eqLogic.height() / eqLogic_height_step) - 1) * 2;
-               eqLogic.height((Math.ceil(eqLogic.height() / eqLogic_height_step) * eqLogic_height_step) - 6 + hMarge);
-           }
+             var hMarge = (Math.ceil(eqLogic.height() / eqLogic_height_step) - 1) * 2;
+             eqLogic.height((Math.ceil(eqLogic.height() / eqLogic_height_step) * eqLogic_height_step) - 6 + hMarge);
+         }
 
-       }
-
-           /* var verticalAlign = eqLogic.find('.verticalAlign');
-            var offset = eqLogic.find('.widget-name').height();
-            offset = (offset < 1) ? -5 : offset-12;
-            if (count(verticalAlign) > 0 && verticalAlign != undefined) {
-                verticalAlign.css('position', 'relative');
-                //verticalAlign.css('top', ((eqLogic.height() - verticalAlign.height()) / 2) - offset);
+     }
+     if(eqLogic_vertical_align == 1){
+         var verticalAlign = eqLogic.find('.verticalAlign');
+         var offset = eqLogic.find('.widget-name').height();
+         offset = (offset < 1) ? -5 : offset-12;
+         if (count(verticalAlign) > 0 && verticalAlign != undefined) {
+            verticalAlign.css('position', 'relative');
+                verticalAlign.css('top', ((eqLogic.height() - verticalAlign.height()) / 2) - offset);
                 verticalAlign.css('left', (eqLogic.width() - verticalAlign.width()) / 2);
-            }*/
-        }
-    });
             }
+        }
+    }
+});
+}
